Linting | Added a simulated incident upload

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="911 Incidents Map"
-    />
+    <meta name="description" content="911 Incidents Map" />
     <title>911 Incidents Map</title>
   </head>
   <body>
